💄 (ui): Fix spacing in toolbar

--- a/web/src/components/PlannerToolbar/PlannerToolbar.module.scss
+++ b/web/src/components/PlannerToolbar/PlannerToolbar.module.scss
@@ -32,6 +32,14 @@ $c_height: calc(100vh - 36px - 1rem - $nav_height - 2rem * 2);
 
   .categoryScroll {
     height: calc($c_height - 90px - 1rem);
+    max-height: calc($c_height - 90px - 1rem);
+
+    padding-right: 1rem;
+    padding-left: 0.5rem;
+  }
+
+  .categoryScrollTrip {
+    height: calc($c_height - 90px - 1rem);
     max-height: calc($c_height - 90px - 1rem - 50px);
 
     padding-right: 1rem;
